Added jcg parameter binDir to set the output path of the compiler. By default this is ./bin

--- a/jcg.properties
+++ b/jcg.properties
@@ -2,7 +2,8 @@
 # Copyright (c) 2010 by Guido Steinacker
 #
 
-sourceDir=src/example/java
-targetDir=src/generated/java
+sourceDir=./src/example/java
+targetDir=./src/generated/java
 recursive=true
 selector=immutable-model
+binDir=./out
