Implemented parsing of generic types. The transformation and code generation for generic types is still missing. Implemented parsing of imports. Static imports are still missing. Implemented a new code generation facility used to generate method bodies or other code snippets. Imports needed by the generated code are now added to the Type. The existing ("old") code-generation code will be removed.

--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,9 @@
         <fileset dir="lib">
             <include name="*.jar"/>
         </fileset>
+        <fileset dir="${jdk.home}">
+            <include name="lib/tools.jar" />
+        </fileset>
     </path>
 
     <target name="compile"
