--- a/src/main/resources/templates/formats/modifier.properties
+++ b/src/main/resources/templates/formats/modifier.properties
@@ -1,7 +1,7 @@
-java.util.Collection=this.%s = new java.util.ArrayList(%s);
-java.util.List=this.%s = new java.util.ArrayList(%s);
-java.util.Set=this.%s = new java.util.HashSet(%s);
-java.util.Map=this.%s = new java.util.HashMap(%s);
-java.util.SortedMap=this.%s = new java.util.TreeMap(%s);
-java.util.SortedSet=this.%s = new java.util.TreeSet(%s);
-default=this.%s = %s;
+java.util.Collection=this.%s = new java.util.ArrayList%s(%s);
+java.util.List=this.%s = new java.util.ArrayList%s(%s);
+java.util.Set=this.%s = new java.util.HashSet%s(%s);
+java.util.Map=this.%s = new java.util.HashMap%s(%s);
+java.util.SortedMap=this.%s = new java.util.TreeMap%s(%s);
+java.util.SortedSet=this.%s = new java.util.TreeSet%s(%s);
+default=this.%s = %s%s;
